--- a/public/app/templates/items/edit.mustache
+++ b/public/app/templates/items/edit.mustache
@@ -5,29 +5,29 @@
 	</h1>
 </div>
 <div class="row">
-    <div class="span3">
-    </div>
-    <div class="span9">
-      <form class="form-horizontal">
-        <legend>Item Details</legend>
-        <div class="control-group">
-          <label class="control-label" for="nameInput">Name</label>
-          <div class="controls">
-              <input type="text" class="input-xlarge" id="itemName"  placeholder="Item name"  value="{{name}}">
-              <p class="help-block">Descriptive name for the Item</p>
-          </div>
+  <div class="span3">
+  </div>
+  <div class="span9">
+    <form class="form-horizontal" id="new-item" method="post">
+      <input type="hidden" name="apiKey" value="special-key" />
+      <div class="control-group">
+        <label class="control-label" for="nameInput">Name</label>
+        <div class="controls">
+          <input type="text" class="input-xlarge" id="itemName"  placeholder="Item name" value="{{name}}">
+          <p class="help-block">Descriptive name for the Item</p>
         </div>
-        <div class="control-group">
-          <label class="control-label" for="priceInput">Price</label>
-          <div class="controls">
-              <input type="text" class="input-xlarge" id="itemPrice"  placeholder="Item price"  value="{{price}}">
-              <p class="help-block">Price for the item</p>
-          </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="priceInput">Price</label>
+        <div class="controls">
+          <input type="text" class="input-xlarge" id="itemPrice"  placeholder="Item price" value="{{price}}">
+          <p class="help-block">Price of the item</p>
         </div>
-        <div class="form-actions">
-            <button type="submit" class="btn btn-primary save">Save changes</button>
-            <button type="reset" class="btn">Cancel</button>
-          </div>
-      </form>
-    </div>
+      </div>
+      <div class="form-actions">
+        <button type="submit" class="btn btn-primary save">Save changes</button>
+        <button type="reset" class="btn">Cancel</button>
+      </div>
+    </form>
+  </div>
 </div>	
