--- a/public/app/templates/static/about.mustache
+++ b/public/app/templates/static/about.mustache
@@ -3,10 +3,10 @@
   <div class="page-header">
     <h1>About <small>BB starter</small></h1>
   </div>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-  irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-  deserunt mollit anim id est laborum
+  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+  voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
+  occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt
+  mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et
+  expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque
+  nihil impedit quo minus id quod maxime placeat face
 </div>  
