--- a/public/app/templates/items/list.mustache
+++ b/public/app/templates/items/list.mustache
@@ -5,11 +5,22 @@
 	</h1>
 </div>
 <div class="row">
-	<div class="span16">
-		<ul>
-      {{#items}}
-		    <li>{{name}}</li>
-		  {{/items}}
-		</ul>
+	<div class="span4">
+		<table class="table table-striped table-bordered">
+		  <thead>
+		    <tr>
+		      <th>Item</th>
+		      <th>Price</th>
+		    <tr>
+		  </thead>
+		  <tbody>
+		    {{#items}}
+		      <tr>
+		        <td>{{name}}</td>
+		        <td>{{price}}</td>
+		      </tr>
+		    {{/items}}
+		  </tbody>
+		</table>
 	</div>
 </div>
