--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -1,3 +1,10 @@
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
+
+.loader {
+  background: url(../images/loader.gif) no-repeat;
+  width: 32px;
+  height: 32px;
+  margin: 0 auto;
+}
