--- a/public/app/templates/static/about.mustache
+++ b/public/app/templates/static/about.mustache
@@ -1,7 +1,7 @@
 
 <div class="content" id="about">
   <div class="page-header">
-    <h1>About <small>BB starter</small></h1>
+    <h1>About <small>(this is a static page)</small></h1>
   </div>
   At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
   voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
