--- a/public/app/templates/home/main.mustache
+++ b/public/app/templates/home/main.mustache
@@ -3,10 +3,37 @@
   <div class="page-header">
     <h1>Welcome <small>to backbone bootstrap starter</small></h1>
   </div>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-  irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-  deserunt mollit anim id est laborum
+
+  <div class="row">
+    <div class="span6">
+      <p>
+        BB starter is a custom boilerplate for developing web clients with backbone.js
+        and twitter bootstrap. It uses mustache for template handling and rendering.
+      </p>
+
+      <p>
+        The application demonstrates simple CRUD operations on items. The items are
+        fetched from nodejs-express server which returns the results from mongodb
+        in json format. A more or less REST based implementation.
+      </p>
+
+      <p>
+        I just started working on backbone, there might be lot which can be generalized
+        and made better. Feel free to fork and send pull requests!
+      </p>
+    </div>
+
+    <div class="span5 offset1">
+      <a href="https://github.com/madhums/bbstarter" class="btn btn-large btn-primary">
+        <i class="icon-random icon-white"></i>
+        &nbsp;Fork me on github
+      </a>
+      &nbsp;
+      <a href="https://github.com/madhums/bbstarter/tarball/master" class="btn btn-large">
+        <i class="icon-download icon-black"></i>
+        &nbsp;Download tar.gz
+      </a>
+    </div>
+  </div>
+
 </div>
