--- a/public/app/templates/items/form.mustache
+++ b/public/app/templates/items/form.mustache
@@ -1,9 +1,3 @@
-
-<div class="page-header">
-	<h1>
-		Edit Item
-	</h1>
-</div>
 <div class="row">
   <div class="span3">
   </div>
@@ -19,12 +13,11 @@
         <label class="control-label" for="priceInput">Price</label>
         <div class="controls">
           <input type="text" class="input-xlarge" id="itemPrice"  placeholder="Item price" value="{{price}}">
-          <p class="help-block">Price of the item</p>
         </div>
       </div>
       <div class="form-actions">
         <button type="submit" class="btn btn-primary">Save changes</button>
-        <button type="reset" class="btn cancel">Cancel</button>
+        <button type="reset" class="btn">Cancel</button>
       </div>
     </form>
   </div>
