--- a/public/app/templates/items/list.mustache
+++ b/public/app/templates/items/list.mustache
@@ -5,19 +5,32 @@
 	</h1>
 </div>
 <div class="row">
-	<div class="span4">
-		<table class="table table-striped table-bordered">
+	<div class="span6">
+		<table class="table items-list">
 		  <thead>
 		    <tr>
 		      <th>Item</th>
 		      <th>Price</th>
+		      <th colspan="2">&nbsp;</th>
 		    <tr>
 		  </thead>
 		  <tbody>
 		    {{#items}}
 		      <tr>
-		        <td>{{name}}</td>
+		        <td><a href="#/items/{{_id}}">{{name}}</a></td>
 		        <td>{{price}}</td>
+		        <td>
+		          <a href="#/items/{{_id}}/edit" class="btn">
+		            <i class="icon-edit icon-black"></i>
+		            Edit
+	            </a>
+	          </td>
+		        <td>
+		          <a href="#/items/{{_id}}" data-id="{{_id}}" class="btn btn-danger delete">
+		            <i class="icon-trash icon-white"></i>
+		            Delete
+	            </a>
+	          </td>
 		      </tr>
 		    {{/items}}
 		  </tbody>
