--- a/public/app/templates/navbar/navbar.mustache
+++ b/public/app/templates/navbar/navbar.mustache
@@ -1,12 +1,7 @@
 <div class="navbar navbar-fixed-top" role="navigation">
   <div class="navbar-inner">
     <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="#">BB starter</a>
+      <a class="brand" href="#">BB starter demo</a>
       <div class="nav-collapse">
         <ul class="nav">
           <li class="active"><a href="/#">Home</a></li>
